Bug 43755 - handle_owners_changed_prepared_cb doesn't cope with data->added containing a NULL contact
Summary: handle_owners_changed_prepared_cb doesn't cope with data->added containing a ...
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-12 08:47 UTC by Guillaume Desmottes
Modified: 2011-12-13 00:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
handle_owners_changed_prepared_cb: use a NULL safe g_object_ref (1.23 KB, patch)
2011-12-12 08:49 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2011-12-12 08:47:12 UTC
Original bug report: https://bugzilla.gnome.org/show_bug.cgi?id=666007

Yet another "having a NULL TpContact as owner turns everything to shit" bug...
Comment 1 Guillaume Desmottes 2011-12-12 08:49:21 UTC
Created attachment 54365 [details] [review]
handle_owners_changed_prepared_cb: use a NULL safe g_object_ref

An unknown owner is implemented storing a NULL TpContact in the hash table.
Comment 2 Xavier Claessens 2011-12-13 00:26:01 UTC
Damned again... fix looks correct. Thanks.
Comment 3 Guillaume Desmottes 2011-12-13 00:48:23 UTC
Merged to stable (will be in 0.16.4) and master (will be in 0.17.4).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.