handle_owners_changed_prepared_cb: use a NULL safe g_object_ref

An unknown owner is implemented storing a NULL TpContact in the hash table.

https://bugs.freedesktop.org/show_bug.cgi?id=43755